# Turbofan

./: .gitignore  .pylintrc  Makefile  dvc.yaml  requirements_dev.txt  setup.cfg  setup.py
data/: raw.dvc
pipelines/data/: dvc.yaml
pipelines/models/: dvc.yaml  params.yaml
pipelines/viz/: dvc.yaml  params.yaml
src/data/: create_dataset.py  download.py  preprocess.py
src/visualization/: exploration.py
turbofan/: __init__.py  _version.py
turbofan/data/: __init__.py  create_dataset.py  dataset.py  download.py  preprocess.py
turbofan/models/: xgboost_classification.py  xgboost_regression.py
turbofan/viz/: __init__.py  exploration.py  performance_by_threshold.py  plot.py
