[versioneer]
VCS = git
style = pep440
versionfile_source = turbofan/_version.py
versionfile_build = turbofan/_version.py
tag_prefix = v
parentdir_prefix = turbofan-

[metadata]
description-file = README.md

[coverage:run]
source = turbofan

[coverage:html]
directory = coverage_html_report

[flake8]
max-line-length = 100
ignore = F841,   # Local variable name is assigned to but never used.
         W503    # Line break occurred before a binary operator.
exclude =
    .git,
    .eggs,
    __pycache__,
    build/,
    dist/,
    doc/,
    venv*/,
    versioneer.py,
    turbofan/_version.py,

[mypy]
ignore_missing_imports=True
no_implicit_optional=True

[mypy-coffeevision._version]
ignore_errors=True

[pycodestyle]
max_line_length = 100

[pydocstyle]
convention = numpy
add_ignore = D401   # First line should be in imperative mood.
ignore-decorators=property  # No mandator docstring for properties.

[tool:pytest]
testpaths = tests
